--- a/assets/component-loading-overlay.css
+++ b/assets/component-loading-overlay.css
@@ -22,6 +22,12 @@
   display: inline-block;
 }
 
+@media screen and (forced-colors: active) {
+  .loading-overlay__spinner .path{
+    stroke: CanvasText;
+  }
+}
+
 .spinner {
   animation: rotator 1.4s linear infinite;
 }
